--- a/app/views/trips/index.erb
+++ b/app/views/trips/index.erb
@@ -1,5 +1,6 @@
 <h1>Trips</h1>
 
+<p><a href="/trips/new">New Trip</a></p>
 
 <p><a href="/login">Log In</a></p>
 <p><a href="/logout">Log Out</a></p>
