Add show page for trip

--- a/app/views/trips/new.erb
+++ b/app/views/trips/new.erb
@@ -14,7 +14,7 @@
   <input id="duration" type="text" name="duration">
   <br>
   <label for="reflections">Reflections</label>
-  <textarea id="refelctions" name="textarea" rows="5" cols="30">Write trip reflections here</textarea>
+  <textarea id="reflections" name="reflections" rows="5" cols="30" placeholder="Write trip reflections here"></textarea>
 
   <br><br>
   <input type="submit" value="Create Trip">
