--- a/app/views/trips/show.erb
+++ b/app/views/trips/show.erb
@@ -16,7 +16,5 @@
   <p>Reflections: <%= @trip.reflections %></p>
 <% end %>
 
-<!--   <p>Destination: <%= @trip.destination %></p>
-  <p>Arrival Date: <%= @trip.arrival_date %></p>
-  <p>Duration: <%= @trip.duration %></p>
- -->
+<br>
+<a href="/trips/<%= @trip.id %>/edit">Edit Trip</a>
