--- a/app/views/trips/show.erb
+++ b/app/views/trips/show.erb
@@ -18,3 +18,7 @@
 
 <br>
 <a href="/trips/<%= @trip.id %>/edit">Edit Trip</a>
+<form action="/trips/<%= @trip.id %>/delete" method="POST">
+  <input type="hidden" name="_method" value="delete">
+  <input type="submit" value="Delete Trip">
+</form>
