--- a/app/views/trips/new.erb
+++ b/app/views/trips/new.erb
@@ -2,7 +2,7 @@
 
 <form action="/trips" method="POST">
   <label for="name">Trip Name</label>
-  <input id="name" type="text" name="name">
+  <input id="name" type="text" name="trip[name]">
   <br>
   <label for="destination">Destination</label>
   <input id="destination" type="text" name="trip[destination]">
