Add bootstrap and style Signup and Login page

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,4 +1,4 @@
 <h1>Welcome to Travel Journal</h1>
 
-<p><a href="/signup">Sign Up</a></p>
-<p><a href="/login">Log In</a></p>
+<a href="/signup" class="btn btn-default">Sign Up</a>
+<a href="/login" class="btn btn-default">Log In</a>
