--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,14 +1,18 @@
 <h1>Travel Journal Log In</h1>
-
-<form action="/login" method="POST">
-  <label for="username">Username</label>
-  <input id="username" type="text" name="username">
-  <br>
-  <label for="password">Password</label>
-  <input id="password" type="password" name="password">
-  <br>
-  <input type="submit" value="Log In">
-</form>
-
-<br><br>
 <a href="/">Home</a>
+<br>
+<br>
+<br>
+<form action="/login" method="POST">
+  <div class="form-group">
+    <label for="username">Username</label>
+    <input id="username" class="form-control" type="text" name="username">
+  </div>
+  <div class="form-group">
+    <label for="password">Password</label>
+    <input id="password" class="form-control" type="password" name="password">
+  </div>
+  <div class="form-group">
+    <input type="submit" class="btn btn-default" value="Log In">
+  </div>
+</form>
