--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -1,17 +1,19 @@
 <h1>New User Sign up:</h1>
 
 <form action="/signup" method="POST">
-  <label for="username">Username</label>
-  <input id="username" type="text" name="username">
-  
-  <br>
-  <label for="email">Email</label>
-  <input id="email" type="email" name="email">
-  
-  <br>
-  <label for="password">Password</label>
-  <input id="password" type="password" name="password">
-  
-  <br>
-  <input type="submit" value="Sign Up">
+  <div class="form-group">
+    <label for="username">Username</label>
+    <input id="username" class="form-control" type="text" name="username">
+  </div>
+  <div class="form-group">
+    <label for="email">Email</label>
+    <input id="email" class="form-control" type="email" name="email">
+  </div>
+  <div class="form-group">
+    <label for="password">Password</label>
+    <input id="password" class="form-control" type="password" name="password">
+  </div>
+  <div class="form-group">
+    <input type="submit" class="btn btn-default" value="Sign Up">
+  </div>
 </form>
