--- a/app/views/trips/index.erb
+++ b/app/views/trips/index.erb
@@ -5,4 +5,6 @@
 <% end %>
 
 <p><a href="/trips/new">New Trip</a></p>
-<p><a href="/logout">Log Out</a></p>
+
+<br><br><br>
+<a href="/logout" class="btn btn-default">Log Out</a>
