Make small edits to the styling of button elements and wording of index page and title

--- a/app/views/trips/edit.erb
+++ b/app/views/trips/edit.erb
@@ -20,5 +20,5 @@
   <textarea id="reflections" name="trip[reflections]" cols="30" placeholder="Write trip reflections here"><%= @trip.reflections %></textarea>
 
   <br><br>
-  <input type="submit" value="Save">
+  <input type="submit" class="btn btn-primary" value="Save">
 </form>
