--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,4 +1,6 @@
-<h1>Welcome to Travel Journal</h1>
+<h1>Travel Journal</h1>
+
+<p>Welcome to your Travel Journal! Log in your travels and cherish the memories!</p>
 
 <a href="/signup" class="btn btn-default">Sign Up</a>
 <a href="/login" class="btn btn-default">Log In</a>
