--- a/app/views/trips/new.erb
+++ b/app/views/trips/new.erb
@@ -27,7 +27,7 @@
   </div>
 
   <div class="form-group">
-    <input type="submit" class="btn btn-default" value="Create Trip">
+    <input type="submit" class="btn btn-primary" value="Create Trip">
   </div>
 </form>
 
