Add image on the home page

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -2,5 +2,10 @@
 
 <p>Welcome to your Travel Journal! Log in your travels and cherish the memories!</p>
 
+<div id="home-images" class="center">
+  <img src="IMG_2668-edit.jpg" alt="indonesia-temple" class="img-thumbnail">
+</div>
+<br>
+<br>
 <a href="/signup" class="btn btn-default">Sign Up</a>
 <a href="/login" class="btn btn-default">Log In</a>
