--- a/app/views/trips/index.erb
+++ b/app/views/trips/index.erb
@@ -1,11 +1,9 @@
 <h1>Travel Journal</h1>
-<p><a href="/trips/new" class="btn btn-primary">New Trip</a></p>
-
-<br>
 <h3>Here's a list of all your trips:</h3>
 <% @trips.each do |trip| %>
   <p> <a href="/trips/<%= trip.id %>"><%= trip.name %></a> </p>
 <% end %>
 
 <br><br>
+<a href="/trips/new" class="btn btn-primary">New Trip</a>
 <a href="/logout" class="btn btn-default">Log Out</a>
