--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -1,5 +1,15 @@
 <h1>New User Sign up:</h1>
 
+<% if flash.has?(:errors) %>
+  <div class="alert alert-danger" role="alert">
+    <ul>
+      <% flash[:errors].each do |error| %>
+        <li><%= error %></li>
+      <% end %>
+    </ul>
+  </div>
+<% end %>
+
 <form action="/signup" method="POST">
   <div class="form-group">
     <label for="username">Username</label>
