--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -24,6 +24,6 @@
     <input id="password" class="form-control" type="password" name="password">
   </div>
   <div class="form-group">
-    <input type="submit" class="btn btn-default" value="Sign Up">
+    <input type="submit" class="btn btn-primary" value="Sign Up">
   </div>
 </form>
