Added horizontal rule tag in views

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,4 +1,5 @@
 <h1>Travel Journal</h1>
+<hr>
 
 <p>Welcome to your Travel Journal! Log in your travels and cherish the memories!</p>
 
@@ -6,6 +7,5 @@
   <img src="IMG_2668-edit.jpg" alt="indonesia-temple" class="img-thumbnail">
 </div>
 <br>
-<br>
-<a href="/signup" class="btn btn-default">Sign Up</a>
-<a href="/login" class="btn btn-default">Log In</a>
+<a href="/signup" class="btn btn-primary">Sign Up</a>
+<a href="/login" class="btn btn-primary">Log In</a>
