--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,4 +1,5 @@
 <h1>Travel Journal Log In</h1>
+<hr>
 
 <a href="/">Home</a>
 <br><br><br>
@@ -13,6 +14,6 @@
     <input id="password" class="form-control" type="password" name="password">
   </div>
   <div class="form-group">
-    <input type="submit" class="btn btn-default" value="Log In">
+    <input type="submit" class="btn btn-primary" value="Log In">
   </div>
 </form>
